fix(TextArea): fixed placeholder color misalignment with TextField

--- a/src/components/Reshaped/Reshaped.css
+++ b/src/components/Reshaped/Reshaped.css
@@ -86,9 +86,10 @@ label {
 	transition: none !important;
 }
 
+textarea::placeholder,
 input::placeholder {
-	color: var(--rs-color-neutral-faded);
 	opacity: 0.5;
+	color: var(--rs-color-foreground-neutral-faded);
 }
 
 html {
